--- a/app_doctor/package.json
+++ b/app_doctor/package.json
@@ -37,6 +37,8 @@
         "extract-text-webpack-plugin": "^2.0.0-beta",
         "file-loader": "^0.10.0",
         "node-sass": "^4.5.0",
+        "react-redux": "^5.0.2",
+        "redux": "^3.6.0",
         "sass-loader": "^6.0.1",
         "style-loader": "^0.13.1",
         "webpack": "^2.2.1"
