--- a/app_doctor/package.json
+++ b/app_doctor/package.json
@@ -34,11 +34,14 @@
         "babel-preset-es2015": "^6.22.0",
         "babel-preset-react": "^6.23.0",
         "css-loader": "^0.26.1",
+        "es6-promise": "^4.0.5",
         "extract-text-webpack-plugin": "^2.0.0-beta",
         "file-loader": "^0.10.0",
+        "isomorphic-fetch": "^2.2.1",
         "node-sass": "^4.5.0",
         "react-redux": "^5.0.2",
         "redux": "^3.6.0",
+        "redux-thunk": "^2.2.0",
         "sass-loader": "^6.0.1",
         "style-loader": "^0.13.1",
         "webpack": "^2.2.1"
