--- a/app_doctor/package.json
+++ b/app_doctor/package.json
@@ -38,8 +38,10 @@
         "extract-text-webpack-plugin": "^2.0.0-beta",
         "file-loader": "^0.10.0",
         "isomorphic-fetch": "^2.2.1",
+        "materialize-css": "^0.98.0",
         "node-sass": "^4.5.0",
         "react-redux": "^5.0.2",
+        "react-table": "^5.3.2",
         "redux": "^3.6.0",
         "redux-thunk": "^2.2.0",
         "sass-loader": "^6.0.1",
