--- a/app_doctor/package.json
+++ b/app_doctor/package.json
@@ -50,6 +50,7 @@
         "webpack": "^2.2.1"
     },
     "dependencies": {
+        "body-parser": "^1.16.1",
         "express": "^4.14.1",
         "react": "^15.4.2",
         "react-dom": "^15.4.2"
