--- a/training_model/requirements.txt
+++ b/training_model/requirements.txt
@@ -35,6 +35,7 @@ pytz==2016.10
 pyzmq==16.0.2
 qtconsole==4.2.1
 scikit-learn==0.18.1
+scipy==0.18.1
 simplegeneric==0.8.1
 six==1.10.0
 terminado==0.6
