--- a/app_doctor/package.json
+++ b/app_doctor/package.json
@@ -36,7 +36,7 @@
         "css-loader": "^0.26.1",
         "es6-promise": "^4.0.5",
         "extract-text-webpack-plugin": "^2.0.0-beta",
-        "file-loader": "^0.10.0",
+        "file-loader": "^0.10.1",
         "isomorphic-fetch": "^2.2.1",
         "materialize-css": "^0.98.0",
         "node-sass": "^4.5.0",
@@ -45,8 +45,10 @@
         "react-table": "^5.3.2",
         "redux": "^3.6.0",
         "redux-thunk": "^2.2.0",
+        "resolve-url-loader": "^2.0.1",
         "sass-loader": "^6.0.1",
         "style-loader": "^0.13.1",
+        "url-loader": "^0.5.8",
         "webpack": "^2.2.1"
     },
     "dependencies": {
